<?xml version="1.0"?>
<package format="2">
  <name>livox_laser_simulation</name>
  <version>0.0.0</version>
  <description>The livox_laser_simulation package</description>
  <license>Apache 2</license>
  
  <maintainer email="lfc@todo.todo">lfc</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>opende</depend>
  <depend>tf</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>gazebo_ros</depend>
  
  <export>

  </export>

</package>
